--- a/JenniferDuffDesign_Desktop.css
+++ b/JenniferDuffDesign_Desktop.css
@@ -466,6 +466,11 @@ header nav a div{
     cursor: default;
 }
 
+/* .projectTile:hover .linkbox{
+    pointer-events: all;
+    cursor: pointer;
+} */
+
 .infoContainer{
     display: flex;
     flex-wrap: wrap;
@@ -532,6 +537,7 @@ header nav a div{
 }
 
 .linkBox{
+    /* visibility: hidden; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -616,6 +622,7 @@ header nav a div{
 #weatherCheckerTile{
     background-image: url('Assets/portfolioImgs/weatherAppScreenshot.png');
     background-size: cover;
+    background-position: top;
 }
 
 #CircleOutlineSolid2{
